===========================

.. *Release date: XXXX-XX-XX*

*Not yet released, see sections below for changes released in 3.3.1*

Core and Builtins
-----------------

- Issue #17619: Make input() check for Ctrl-C correctly on Windows.

- Issue #17610: Don't rely on non-standard behavior of the C qsort() function.

- Issue #17357: Add missing verbosity output when using -v/-vv.

Library
-------

- Issue #17502: Process DEFAULT values in mock side_effect that returns iterator.
  Patch by Michael Foord.

- Issue #17572: Avoid chained exceptions while passing bad directives to
  time.strptime().  Initial patch by Claudiu Popa.

- Issue #17435: threading.Timer's __init__ method no longer uses mutable
  default values for the args and kwargs parameters.

- Issue #17526: fix an IndexError raised while passing code without filename to
  inspect.findsource().  Initial patch by Tyler Doyle.

IDLE
----

- Issue #17613: Prevent traceback when removing syntax colorizer in IDLE.

- Issue #1207589: Backwards-compatibility patch for right-click menu in IDLE.

- Issue #16887: IDLE now accepts Cancel in tabify/untabify dialog box.

- Issue #17625: In IDLE, close the replace dialog after it is used.

- Issue #14254: IDLE now handles readline correctly across shell restarts.

- Issue #17614: IDLE no longer raises exception when quickly closing a file.

- Issue #6698: IDLE now opens just an editor window when configured to do so.

- Issue #8900: Using keyboard shortcuts in IDLE to open a file no longer
  raises an exception.

- Issue #6649: Fixed missing exit status in IDLE. Patch by Guilherme Polo.

Documentation
-------------

- Issue #15940: Specify effect of locale on time functions.


What's New in Python 3.3.1?
===========================

*Release date: 07-Apr-2013*

Build
-----

- Issue #17550: Fix the --enable-profiling configure switch.

Library
-------

- Issue #17625: In IDLE, close the replace dialog after it is used.


What's New in Python 3.3.1 release candidate 1?